ignore generated libvirtd.logrotate.
* qemud/.cvsignore: Add libvirtd.logrotate.
* qemud/.gitignore: Regenerate.

--- a/qemud/.cvsignore
+++ b/qemud/.cvsignore
@@ -1,11 +1,12 @@
-Makefile
-Makefile.in
+*.gcda
+*.gcno
+*.la
+*.lo
 .deps
 .libs
-*.lo
-*.la
+Makefile
+Makefile.in
 libvirt_qemud
 libvirtd
 libvirtd.init
-*.gcno
-*.gcda
+libvirtd.logrotate
