fix non-srcdir build failure
* qemud/Makefile.am (check-local): Prefix use of test_libvirtd.aug
with $(srcdir)/.  Add quotes around $(AUGPARSE), in case it expands
to something unusual.

--- a/qemud/Makefile.am
+++ b/qemud/Makefile.am
@@ -239,7 +239,8 @@ libvirtd.init: libvirtd.init.in
 	mv $@-t $@
 
 check-local:
-	if [ -x $(AUGPARSE) ]; then $(AUGPARSE) -I $(srcdir) test_libvirtd.aug ; fi
+	test -x '$(AUGPARSE)' \
+	  && '$(AUGPARSE)' -I $(srcdir) $(srcdir)/test_libvirtd.aug || :
 
 else
 
