--- a/docs/index.html.in
+++ b/docs/index.html.in
@@ -35,7 +35,7 @@
 	on Linux and Solaris hosts.
       </li>
       <li>
-	The <a href="http://fabrice.bellard.free.fr/qemu/">QEMU</a> emulator
+	The <a href="http://bellard.org/qemu/">QEMU</a> emulator
       </li>
       <li>
 	The <a href="http://kvm.qumranet.com/kvmwiki">KVM</a> Linux hypervisor
