--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -32,6 +32,17 @@
 %define with_xen_proxy 0
 %endif
 
+#
+# If building on RHEL switch on the specific support
+# for the specific Xen version
+#
+%if 0%{?fedora}
+%define with_rhel5 0
+%else
+%define with_rhel5 1
+%endif
+
+
 Summary: Library providing a simple API virtualization
 Name: libvirt
 Version: @VERSION@
@@ -207,6 +218,10 @@ of recent versions of Linux (and other OSes).
 %define _without_uml --without-uml
 %endif
 
+%if %{with_rhel5}
+%define _with_rhel5_api --with-rhel5-api
+%endif
+
 %configure %{?_without_xen} \
            %{?_without_qemu} \
            %{?_without_openvz} \
@@ -217,6 +232,7 @@ of recent versions of Linux (and other OSes).
            %{?_without_python} \
            %{?_without_libvirtd} \
            %{?_without_uml} \
+           %{?_with_rhel5_api} \
            --with-init-script=redhat \
            --with-qemud-pid-file=%{_localstatedir}/run/libvirt_qemud.pid \
            --with-remote-file=%{_localstatedir}/run/libvirtd.pid
