--- a/Makefile.cfg
+++ b/Makefile.cfg
@@ -40,6 +40,7 @@ local-checks-to-skip =			\
   sc_prohibit_jm_in_m4			\
   sc_prohibit_quote_without_use		\
   sc_prohibit_quotearg_without_use	\
+  sc_prohibit_nonreentrant		\
   sc_root_tests				\
   sc_space_tab				\
   sc_sun_os_names			\
