maint: update list of error function names and adapt
* Makefile.maint (msg_gen_function): Update list.
Remove some now-unused names, add some new ones.
* src/hash.c (virHashError): Remove unused definition.
* src/openvz_conf.h (openvzLog): Likewise.
* src/xen_unified.c: Mark newly-exposed diagnostics for translation.

--- a/Makefile.maint
+++ b/Makefile.maint
@@ -390,6 +390,7 @@ msg_gen_function += ERROR0
 msg_gen_function += REMOTE_DEBUG
 msg_gen_function += ReportError
 msg_gen_function += VIR_FREE
+msg_gen_function += VIR_INFO
 msg_gen_function += VIR_USE_CPU
 msg_gen_function += errorf
 msg_gen_function += lxcError
@@ -401,9 +402,7 @@ msg_gen_function += qemudDispatchClientFailure
 msg_gen_function += qemudLog
 msg_gen_function += qemudReportError
 msg_gen_function += regerror
-msg_gen_function += remoteDispatchError
 msg_gen_function += remoteDispatchFormatError
-msg_gen_function += umlError
 msg_gen_function += umlLog
 msg_gen_function += umlReportError
 msg_gen_function += virConfError
@@ -414,18 +413,19 @@ msg_gen_function += virLibDomainError
 msg_gen_function += virLog
 msg_gen_function += virNetworkReportError
 msg_gen_function += virNodeDeviceReportError
+msg_gen_function += virProxyError
 msg_gen_function += virRaiseError
 msg_gen_function += virReportErrorHelper
+msg_gen_function += virReportSystemError
 msg_gen_function += virSexprError
 msg_gen_function += virStorageLog
 msg_gen_function += virStorageReportError
-msg_gen_function += virTestError
 msg_gen_function += virXMLError
 msg_gen_function += virXenInotifyError
 msg_gen_function += virXenStoreError
 msg_gen_function += virXendError
-msg_gen_function += virxmlRpcError
 msg_gen_function += vshCloseLogFile
+msg_gen_function += xenUnifiedError
 msg_gen_function += xenXMError
 
 # Uncomment the following and run "make syntax-check" to see diagnostics
