correct and tighten up .*ignore files
* .cvsignore: Don't ignore *.orig or *.rej.  They're not build products.
Don't ignore the entire m4 directory.
* Makefile.maint (sync-vcs-ignore-files): Correct quoting.
Use sed rather than a for loop.
Search only version-controled files (for reproducibility)
* gnulib/lib/netinet/.cvsignore: Append missing newline-at-EOF,
so that the use of sed doesn't mistakenly concatenate lines.
* gnulib/lib/sys/.cvsignore: Likewise.
* m4/.cvsignore: Ignore acinclude.m4 and aclocal.m4, not *.m4.
* .hgignore: Regenerate.
* all .gitignore files: Regenerate.

--- a/Makefile.maint
+++ b/Makefile.maint
@@ -718,9 +718,9 @@ sync-vcs-ignore-files:
 	perl $(c2g)
 	rm -f $(c2g)
 	echo "syntax: glob" > .hgignore
-	for ignore in `find $(srcdir) -name .gitignore`; do \
-	    dir=`dirname $$ignore`; \
-	    for rule in `cat $$ignore`; do \
-	        echo "$$dir/$$rule" >> .hgignore; \
-	    done ; \
-	done
+	( for ignore in $$($(VC_LIST)				\
+	                   | grep -E '(^|/)\.gitignore$$'); do	\
+	    dir=$$(dirname "$$ignore");				\
+	    test "$$dir" = . && pfx= || pfx=$$dir/;		\
+	    sed "s!^!$$pfx!" "$$ignore";			\
+	  done ) | sort -u >> .hgignore
