--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,13 +1,13 @@
 gnulib/lib/gai_strerror.c
 qemud/qemud.c
 qemud/remote.c
+src/bridge.c
 src/conf.c
 src/console.c
 src/datatypes.c
 src/domain_conf.c
 src/iptables.c
 src/libvirt.c
-src/lxc_conf.c
 src/lxc_container.c
 src/lxc_controller.c
 src/lxc_driver.c
