--- a/Makefile.cfg
+++ b/Makefile.cfg
@@ -1,5 +1,5 @@
 # Customize Makefile.maint.                           -*- makefile -*-
-# Copyright (C) 2003-2008 Free Software Foundation, Inc.
+# Copyright (C) 2003-2009 Free Software Foundation, Inc.
 
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -26,30 +26,36 @@ url_dir_list = \
 
 # Tests not to run as part of "make distcheck".
 local-checks-to-skip =			\
-  makefile_path_separator_check		\
+  changelog-check			\
+  check-AUTHORS				\
   makefile-check			\
-  sc_tight_scope			\
+  makefile_path_separator_check		\
+  patch-check				\
   sc_GPL_version			\
   sc_always_defined_macros		\
   sc_cast_of_alloca_return_value	\
   sc_dd_max_sym_length			\
   sc_error_exit_success			\
   sc_file_system			\
+  sc_immutable_NEWS			\
+  sc_m4_quote_check			\
+  sc_makefile_path_separator_check	\
   sc_obsolete_symbols			\
+  sc_prohibit_S_IS_definition		\
   sc_prohibit_atoi_atof			\
   sc_prohibit_jm_in_m4			\
+  sc_prohibit_nonreentrant		\
   sc_prohibit_quote_without_use		\
   sc_prohibit_quotearg_without_use	\
-  sc_prohibit_nonreentrant		\
+  sc_prohibit_stat_st_blocks		\
+  sc_redundant_const			\
   sc_root_tests				\
   sc_space_tab				\
   sc_sun_os_names			\
   sc_system_h_headers			\
+  sc_tight_scope			\
   sc_two_space_separator_in_usage	\
-  sc_useless_cpp_parens			\
-  patch-check				\
-  check-AUTHORS				\
-  changelog-check
+  sc_useless_cpp_parens
 
 useless_free_options =		\
   --name=sexpr_free		\
